--- a/style.css
+++ b/style.css
@@ -17,6 +17,12 @@ body {
 }
 p {
 	color: #562349;
-	font-size: 1.5rem;
+	font-size: 2.5rem;
 	text-decoration: none;
+	font-weight: bolder;
+}
+
+img {
+	border-radius: 30px;
+	border: solid 5px sandybrown;
 }
